Resolve eou not defined, align my expenses headers and disable backdrop clicks in delete popover  (#603)
* Remove backdrop dismiss in delete popover and align add expense headers

* Resolve eou not defined sentry error

* Resolve comments

--- a/src/app/fyle/add-edit-expense/add-edit-expense.page.scss
+++ b/src/app/fyle/add-edit-expense/add-edit-expense.page.scss
@@ -7,6 +7,11 @@
     &__review {
       min-height: 80px;
     }
+
+    &__title {
+      padding-right: 60px;
+      text-align: center;
+    }
   }
 
   &--header-btn-container {
